--- a/CreditManageSystemPro/Areas/Admin/Views/User/AllUser.cshtml
+++ b/CreditManageSystemPro/Areas/Admin/Views/User/AllUser.cshtml
@@ -87,7 +87,7 @@
             layer.open({
                 type: 1,
                 content: msg,
-                area: '500px',
+                area: 'auto',
                 btn: ['确定', '取消'],
                 yes: function (index, layero) {
                     alert(123); 
