--- a/CreditManageSystemPro.Admin/Views/User/AddUser.cshtml
+++ b/CreditManageSystemPro.Admin/Views/User/AddUser.cshtml
@@ -18,7 +18,6 @@
         //将form转为AJAX提交
         function ajaxSubmit(frm, fn) {
             var dataPara = getFormJson(frm);
-            alert(frm.method);
             $.ajax({
                 url: "/Admin/User/AddUser",
                 type: frm.method,
@@ -133,7 +132,7 @@
                             <label class="col-sm-2 control-label">
                                 密码</label>
                             <div class="col-sm-8">
-                                @Html.PasswordFor(model => model.UserProfile.password, new { @class = "form-control", @required = "required", name = "password", @id = "password" })
+                                @Html.PasswordFor(model => model.UserProfile.password, new { @class = "form-control", @required = "required", name = "password", @id = "password", @Value="123456" })
                             </div>
                         </div>
                         <div class="hr-line-dashed">
@@ -142,7 +141,7 @@
                             <label class="col-sm-2 control-label">
                                 确认密码</label>
                             <div class="col-sm-8">
-                                @Html.PasswordFor(model => model.RePassword, new { @class = "form-control", @required = "required", name = "confirm_password", @id = "confirm_password" })
+                                @Html.PasswordFor(model => model.RePassword, new { @class = "form-control", @required = "required", name = "confirm_password", @id = "confirm_password", @Value = "123456" })
                             </div>
                         </div>
                         <div class="hr-line-dashed">
