--- a/CreditManageSystemPro/Areas/Admin/Views/Loan/UpdateLoanApply.cshtml
+++ b/CreditManageSystemPro/Areas/Admin/Views/Loan/UpdateLoanApply.cshtml
@@ -64,7 +64,7 @@
                         <form class="form-horizontal" role="form" id="customerForm" method="POST">
                             <div class="form-group">
                                 <span class="form-groups">
-                                <label class="col-sm-1 control-label">
+                                <label class="col-sm-1 control-label" style="color: red">
                                     贷款客户</label>
                                 <div class="col-sm-2">
                                     @Html.TextBoxFor(model => model.Customer.customerName, new {@class = "form-control", name = "customerName", id = "customerName"})
@@ -80,7 +80,7 @@
                             </div>
                             <div class="form-group">
                                 <span class="form-groups">
-                                <label class="col-sm-1 control-label">
+                                <label class="col-sm-1 control-label" style="color: red">
                                     合同编号</label>
                                 <div class="col-sm-2">
                                     @Html.TextBoxFor(model => model.contractNo, new {@class = "form-control", @required = "required", name = "domicilePlace", id = "domicilePlace"})
