--- a/CreditManageSystemPro.Admin/Views/Loan/UpdateLoanApply.cshtml
+++ b/CreditManageSystemPro.Admin/Views/Loan/UpdateLoanApply.cshtml
@@ -64,7 +64,7 @@
                         <form class="form-horizontal" role="form" id="customerForm" method="POST">
                             <div class="form-group">
                                 <span class="form-groups">
-                                <label class="col-sm-1 control-label">
+                                <label class="col-sm-1 control-label" style="color: red">
                                     贷款客户</label>
                                 <div class="col-sm-2">
                                     @Html.TextBoxFor(model => model.Customer.customerName, new {@class = "form-control", name = "customerName", id = "customerName"})
